--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.3.0",
